If splashscreen bitmap has already been released, then do nothing when observing.  Fixing crash on startup. Bug #185260 r=arougthopher@lizardland.net